fixed some stuff, added fonts and spacing

--- a/style.scss
+++ b/style.scss
@@ -1,15 +1,15 @@
 @import 'partials/background';
 @import 'partials/before-after';
-@import 'partials/fonts-colors';
+
 @import 'partials/layout';
 @import 'partials/mixins.scss';
-
+@import 'partials/fonts-colors';
 
 $left: 15%;
 $right: 15%;
 
 .page-wrapper {
-    @include pretext();
+   // @include pretext();
     grid-template-areas: "intro" "main" "sidebar";
     margin-left: $left;
     margin-right: $right;
@@ -23,7 +23,8 @@ $right: 15%;
     overflow: hidden;
     transform-origin:50% 100%;
     transform:perspective(300px) rotateX(15deg);
-    animation: scroll 10s linear 4s forwards;
+    animation: scroll 120s linear 0s forwards;
+    text-align: justify;
 }
 
 
@@ -77,7 +78,7 @@ $right: 15%;
 
   @keyframes scroll {
     0% { top: 100%; }
-    100% { top: -1000%; }
+    100% { top: -2000%; }
   }
 
 // ----------media queries-------------------
